Add a menu to theme

--- a/petycja_norweskie/templates/base.html
+++ b/petycja_norweskie/templates/base.html
@@ -59,15 +59,11 @@
             <a class="navbar-brand" href="/">Chroń Fundusze Norweskie</a>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
+                    {% for el in menu %}
                     <li class="nav-item">
-                        <a class="nav-link" href="/">Podpisz</a>
+                        <a class="nav-link" href="{{el.url}}">{{el}}</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/">Kto podpisał</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/">Kontakt</a>
-                    </li>
+                    {% endfor %}
                 </ul>
             </div>
         </div>
