--- a/petycja_norweskie/petitions/templates/petitions/petition_success.html
+++ b/petycja_norweskie/petitions/templates/petitions/petition_success.html
@@ -2,10 +2,7 @@
 
 {%  block content %}
     <div class="row">
-        <div class="col-span-6">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab ea magnam minus repellat
-            reprehenderit temporibus. A ad itaque maiores minus optio perspiciatis placeat quisquam quos reiciendis
-            velit? At, eius, eveniet.
-        </div>
+        <div class="col-span-6">Dziękujemy!</div>
         <div class="col-span-6">
             {{ object.thank_you }}
         </div>
