--- a/petycja_norweskie/petitions/templates/petitions/petition_success.html
+++ b/petycja_norweskie/petitions/templates/petitions/petition_success.html
@@ -2,9 +2,8 @@
 
 {%  block content %}
     <div class="row">
-        <div class="col-span-6">Dziękujemy!</div>
-        <div class="col-span-6">
-            {{ object.thank_you }}
+        <div class="col-span-12">
+            {{ object.finish_message | safe }}
         </div>
     </div>
 {%  endblock %}
