--- a/petycja_norweskie/petitions/templates/petitions/signature_form.html
+++ b/petycja_norweskie/petitions/templates/petitions/signature_form.html
@@ -3,12 +3,10 @@
 
 {% block content %}
     <div class="row">
-        <div class="col-span-4">
-            <h1>Petycja</h1>
-            <h2>{{ petition.title }}</h2>
-            {{ petition.text | safe }}
-        </div>
-        <div class="col-span-8">{% crispy form %}
-        </div>
+        {% crispy form %}
+    </div>
+    <div class="row">
+        <h2>{{ petition.title }}</h2>
+        {{ petition.text | safe }}
     </div>
 {% endblock %}
