--- a/petycja_norweskie/templates/base.html
+++ b/petycja_norweskie/templates/base.html
@@ -56,7 +56,7 @@
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 Menu <i class="fa fa-bars"></i>
             </button>
-            <a class="navbar-brand" href="/">Chroń Fundusze Norweskie</a>
+            <a class="navbar-brand" href="/">Fundusze Mechanizmu Finansowego EOG dla organizacji</a>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                     {% for el in menu %}
@@ -75,7 +75,7 @@
             <div class="row">
                 <div class="col-lg-8 offset-lg-2 col-md-10 offset-md-1">
                     <div class="page-heading">
-                        <h1>{% block page-title %}Uchroń od Rządu{% endblock %}</h1>
+                        <h1>{% block page-title %}Niezależnie od rządu{% endblock %}</h1>
                         <span class="subheading">{% block page-subheading %}{% endblock %}</span>
                     </div>
                 </div>
