Add style of form in signature_form.html

--- a/petycja_norweskie/petitions/templates/petitions/signature_form.html
+++ b/petycja_norweskie/petitions/templates/petitions/signature_form.html
@@ -3,7 +3,9 @@
 
 {% block content %}
     <div class="row">
+        <div id="signature-form">
         {% crispy form %}
+        </div>
     </div>
     <div class="row">
         <h2>{{ petition.title }}</h2>
