--- a/petycja_norweskie/templates/base.html
+++ b/petycja_norweskie/templates/base.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>{% block title %}Chrońmy Fundusze Norweskie{% endblock title %}</title>
+    <title>{% block title %}Fundusze Mechanizmu Finansowego EOG dla organizacji{% endblock title %}</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
