Update locale, allow specify fields label

--- a/petycja_norweskie/templates/base.html
+++ b/petycja_norweskie/templates/base.html
@@ -75,7 +75,7 @@
             <div class="row">
                 <div class="col-lg-8 offset-lg-2 col-md-10 offset-md-1">
                     <div class="page-heading">
-                        <h1>{% block page-title %}Niezależnie od rządu{% endblock %}</h1>
+                        <h1>{% block page-title %}niezależne od rządu{% endblock %}</h1>
                         <span class="subheading">{% block page-subheading %}{% endblock %}</span>
                     </div>
                 </div>
