--- a/petycja_norweskie/petitions/templates/petitions/norweskie/petition_detail.html
+++ b/petycja_norweskie/petitions/templates/petitions/norweskie/petition_detail.html
@@ -17,7 +17,7 @@
 
             <a class="btn btn-primary"
                href="{% url 'petitions:signature' slug=object.slug %}">{% trans "They signed" %}</a>
-            <p>Petycje podpisało {{ object.signature_set.all.count }} organizacji. Dołącz do nich!</p>
+            <p>List podpisało {{ object.signature_set.all.count }} organizacji. Dołącz do nich!</p>
         </div>
     </div>
 {% endblock %}
