Fix attribution note

--- a/petycja_norweskie/templates/norweskie/base.html
+++ b/petycja_norweskie/templates/norweskie/base.html
@@ -134,7 +134,7 @@
 {#                            </a>#}
 {#                        </li>#}
 {#                    </ul>#}
-                    <p class="copyright text-muted">Wykonane na zlecenie przez <a href="https://siecobywatelska.pl/uslugi/">Stowarzyszenie Sieć Obywatelska - Watchdog Polska</a></p>
+                    <p class="copyright text-muted">Wykonane na zlecenie przez <a href="https://siecobywatelska.pl/uslugi/">Stowarzyszenie Sieć Obywatelska Watchdog Polska</a></p>
                 </div>
             </div>
         </div>
