--- a/petycja_norweskie/templates/norweskie/base.html
+++ b/petycja_norweskie/templates/norweskie/base.html
@@ -27,7 +27,11 @@
     <link href="{% static 'vendor/font-awesome/css/font-awesome.min.css' %}" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
-
+    <meta property="og:image:url" content="https://norweskie.org/{% static 'img/FB_cover.png' %}" />
+    <meta property="og:image:secure_url" content="https://norweskie.org/{% static 'img/FB_cover.png' %}" />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image:width" content="991" />
+    <meta property="og:image:height" content="381" />
     <!-- Custom styles for this template -->
     <link href="{% static 'css/clean-blog.min.css' %}" rel="stylesheet">
     <!-- This file stores project-specific CSS -->
