--- a/petycja_norweskie/petitions/templates/petitions/norweskie/petition_success.html
+++ b/petycja_norweskie/petitions/templates/petitions/norweskie/petition_success.html
@@ -4,6 +4,11 @@
     <div class="row">
         <div class="col-span-12">
             {{ object.finish_message | safe }}
-        </div>
+            <p>Powiadom innych:</p>
+            <ol type="abc">
+              <li>wyślij wiadomość przez Messenger: <div class="fb-send" data-href="{{ request.get_host }}"></div></li>
+              <li>udostępnij przez Facebook: <div class="fb-share-button" data-href="{{ request.get_host }}" data-layout="button" data-size="small" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fnorweskie.org&amp;src=sdkpreparse">Udostępnij</a></div></li>
+            </ol>
+         </div>
     </div>
 {% endblock %}
