Update management of disabling petition

--- a/petycja_norweskie/petitions/templates/petitions/norweskie/petition_detail.html
+++ b/petycja_norweskie/petitions/templates/petitions/norweskie/petition_detail.html
@@ -2,25 +2,35 @@
 {% load crispy_forms_tags %}
 {% load i18n %}
 {% block main-content %}
-    <div class="row">
-        <div class="col-md-7">
-            {% if campaing.show_title %}
-                <h2>{{ object.title }}</h2>
-            {% endif %}
-            {{ object.overview | safe }}
-            {{ object.text | safe }}
-        </div>
-        <div class="col-md-5">
-            <div id="signature-form">
-                <h2>Wyraź poparcie</h2>
-                {% crispy form %}
-            </div>
-
-            <a class="btn btn-primary"
-               href="{% url 'petitions:signature' slug=object.slug %}">{% trans "They signed" %}</a>
-            <p>List podpisało {{ object.signature_set.all.count }} organizacji. Dołącz do nich!</p>
-            <h2>Powiadom innych:</h2>
-            <p><div class="fb-share-button" data-href="{{ request.get_host }}" data-layout="button" data-size="small" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fnorweskie.org&amp;src=sdkpreparse">Udostępnij</a></div>, <div class="fb-send" data-href="{{ request.get_host }}"></div></p>
-        </div>
+<div class="row">
+  <div class="col-md-7">
+    {% if campaing.show_title %}
+    <h2>{{ object.title }}</h2>
+    {% endif %}
+    {{ object.overview | safe }}
+    {{ object.text | safe }}
+  </div>
+  <div class="col-md-5">
+    {% if petition.is_active %}
+    <div id="signature-form">
+      <h2>Wyraź poparcie</h2>
+      {% crispy form %}
     </div>
+    {% else %}
+     {{petition.disabled_message}}
+    {% endif %}
+    <a class="btn btn-primary"
+       href="{% url 'petitions:signature' slug=object.slug %}">{% trans "They signed" %}</a>
+    <p>List podpisało {{ object.signature_set.all.count }} organizacji. Dołącz do nich!</p>
+    <h2>Powiadom innych:</h2>
+    <p>
+    <div class="fb-share-button" data-href="{{ request.get_host }}" data-layout="button" data-size="small"
+         data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank"
+                                      href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fnorweskie.org&amp;src=sdkpreparse">Udostępnij</a>
+    </div>
+    ,
+    <div class="fb-send" data-href="{{ request.get_host }}"></div>
+    </p>
+  </div>
+</div>
 {% endblock %}
